# mavlink-gimbal

./: LICENSE  README.md
bgc/SimpleBGC_GUI_2_2b2/: README.txt
bgc/SimpleBGC_GUI_2_2b2/conf/: bgc.properties
hardware/: assembly.scad  kugellager.scad  kugellager.stl
hardware/airframe/: bulkheads.scad  gimbalBay.scad  innerShell.scad  outerShell.scad  zholes.scad
mavlink-gimbal_old/: CMakeLists.txt  gimbal2.py  gimbal_manager.py  main.cpp
mavlink-gimbal_old/mavlink/: CMakeLists.txt
mavlink-gimbal_old/mavlink/v2.0/common/: common.h  mavlink.h  mavlink_msg_uwb_swarm_formation.h  mavlink_msg_uwb_swarm_sensor.h  testsuite.h
mavlink-gimbal_old/mavlink/v2.0/minimal/: mavlink.h  minimal.h
mavlink-gimbal_old/mavlink/v2.0/standard/: mavlink.h  standard.h
mavlink-gimbal_old/python/: gimbal.py  mavlink.py
src/arduino/test_microstepper/: test_microstepper.ino
src/python/: gimbal2.py  myMavlink.py  test_takeoff.py
